# PythonLearn

./: .gitignore  READMY.md  pyproject.toml
datatypes/: index.py
info/plans/: general.md  weeks.md
info/poetry/: Poetry.md
info/tasks/: typesdata.md
notebooks/: READMY.md
notebooks/blocks/block-one/: READMY.md
notebooks/info/: sample.md
pythonlearn/: main.py
pythonlearn/block-1/week-1/: 1.py  2.py  3.py  4.py
variables/: index.py
